@@ -1,0 +1,3 @@
+TABLE_SCHEM,TABLE_CATALOG
+-------------------------------
+public,jdbc_test1
